fixed main menu align

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,7 +36,11 @@ body {
   background-color: #000000;
 
 }
-
+.main-menu li{
+  display: inline-block;
+  font-size: 16px;
+  vertical-align: top;
+}
 .main-menu > li > a {
   color: #3d3d3d;
 }
@@ -49,11 +53,24 @@ body {
 .secondary-menu > li > a {
   color: #3d3d3d;
 }
-
+.double-width li{
+  width: 50vw;
+}
+.triple-width li{
+  width: 33.3333333333vw;
+}
 .secondary-menu {
   display: none;
+  position: absolute;
+  right: 0;
+  left: 0;
+  /*del*/
+  font-size: 0;
 }
-
+.secondary-menu li{
+  color: #000000;
+  background-color: #ffffff;
+}
 .main-menu li:hover > .secondary-menu {
   display: block;
 }
@@ -61,15 +78,18 @@ body {
 /*??????????????!?!?!!?!?*//*50%???????????????????????????*/
 .main-menu li:hover > .secondary-menu > li > a {
   display: inline-block;
+  outline: dashed;
+}
+
+.main-menu li{
+  display: inline-block;
   height: 100px;
+}
+
+.main-menu a{
   width: 100%;
-  border: solid;
+  height: 100%;
 }
-
-.main-menu li:hover > .secondary-menu > li {
-  width: 50%%;
-}
-
 .secondary-menu > li > a:focus,
 .secondary-menu > li > a:hover {
   color: #ffffff;
@@ -88,28 +108,29 @@ body {
 /*50%???????????????????????????*/
 .main-nav a:hover + .secondary-menu a {
   display: inline-block;
-  height: 100px;
-  border: solid;
+  outline: dashed;
+  width: 33.3333333333%;
 }
 
 .main-nav a:hover + .secondary-menu {
-  width: 50%;
-  border: solid;
+  /*width: 50%;*/
+  outline: dashed;
 }
 
 /*can I put in same class?????*/
 /*text decoration here?*/
 /*.social-media li,*/
-.why-comigo{
+.why-comigo {
   height: 28.999917287vw;
 }
+
 .round-button,
 .red-button {
   color: #ffffff;
   background-color: #f14848;
   display: inline-block;
   padding: 10px 20px;
-  border-radius: 42.232pxpx;
+  border-radius: 42.232px;
 
 }
 
@@ -117,11 +138,10 @@ body {
 .white-button {
   color: #f14848;
   background-color: #ffffff;
-  border-radius: 15.232px;
   /*need????*/
   display: inline-block;
   padding: 10px 20px;
-  border-radius: 42.232pxpx;
+  border-radius: 42.232px;
 
 }
 
@@ -165,6 +185,7 @@ body {
 /*class for deleting spacing between inline blocks, delete when better solution found*/
 .all-blogs {
   font-size: 0;
+
 }
 
 .blogs {
@@ -179,6 +200,7 @@ body {
   height: 36.1111111111vw;
   width: 16.6666666667vw;
   vertical-align: top;
+  position: relative;
 }
 
 .blogs span {
@@ -187,6 +209,8 @@ body {
   background-color: #f14848;
   width: 100%;
   height: 5.2051282051vw;
+  position: absolute;
+  bottom: -5.2051282051vw;
 }
 
 .blogs a {
@@ -207,6 +231,12 @@ body {
   /*del*/
   font-size: 16px;
   vertical-align: top;
+  position: relative;
+}
+
+.blogs p {
+  position: absolute;
+  bottom: 0;
 }
 
 .wheel {
@@ -228,10 +258,12 @@ body {
 .quality {
   background-image: url(../assets/blog/post_quality-750x508.jpeg);
 }
+
 /*dek*/
-.solutions{
+.solutions {
   font-size: 0;
 }
+
 .red-brain {
   color: #ffffff;
   /*change height to 100% and add height to the father*/
